fix: update warning callout text color for better contrast

--- a/docs/assets/src/scss/_callouts.scss
+++ b/docs/assets/src/scss/_callouts.scss
@@ -40,6 +40,9 @@
 
 .bd-callout-warning {
   @include bs-callout-variant($docs-warning);
+  h4 {
+    color: $color-text-warning;
+  }
 }
 
 .bd-callout-danger {
